fix(style): moving word-wrap for code blocks to the main style instead of only for smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,6 +248,7 @@ h4 {
 	margin-top: 10px;
 	padding: 10px;
 	font-size: 16px;
+	word-wrap: break-word;
 }
 
 .active-blog {
@@ -509,12 +510,6 @@ h1 {
 /*Image transform from the left*/
 .img-scale:active img, .img-scale:focus img {
 	transform-origin: center left;
-}
-
-/*Styling for code blocks*/
-.code {
-	word-wrap: break-word;
-}
 }
 
 /* For iOS devices */
